2016-08-27 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-08-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--clock-address=' argument.
2016-08-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a Configuration dialog in 'src/configdialog.cpp' and
	'src/configdialog.h'.
2016-08-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Count Up/Count Down' control.
2016-08-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a Setup button.
2016-08-27 Fred Gleason <fredg@paravelsystems.com>
	* Made Preset, Countdown Mode and widget geometry persistent across
	instances.
2016-08-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed up resizing to preserve control layout.