@@ -1,0 +1,182 @@
+/* XPM */
+static const char * walltime_16x16_xpm[] = {
+"16 16 163 2",
+"  	c None",
+". 	c #B7B9B4",
+"+ 	c #B2B5AF",
+"@ 	c #A7AAA4",
+"# 	c #A4A7A1",
+"$ 	c #9B9D98",
+"% 	c #B1B4AD",
+"& 	c #BDC0BA",
+"* 	c #DDDEDA",
+"= 	c #EAEBE9",
+"- 	c #F5F5F4",
+"; 	c #E5E6E4",
+"> 	c #CFD1CD",
+", 	c #9C9E9A",
+"' 	c #8C8E8A",
+") 	c #A5A8A2",
+"! 	c #CCCEC9",
+"~ 	c #EDEDEC",
+"{ 	c #C3C5C1",
+"] 	c #AFB1AC",
+"^ 	c #A4A6A1",
+"/ 	c #ADAFAB",
+"( 	c #BFC1BD",
+"_ 	c #E7E9E6",
+": 	c #B8B9B6",
+"< 	c #82847F",
+"[ 	c #9B9E99",
+"} 	c #C4C6C1",
+"| 	c #DDDFDA",
+"1 	c #ABADA8",
+"2 	c #C1C4BE",
+"3 	c #D3D6D1",
+"4 	c #DBDDD8",
+"5 	c #D1D3CD",
+"6 	c #A6A9A3",
+"7 	c #D4D8D3",
+"8 	c #B1B3AE",
+"9 	c #797D78",
+"0 	c #9EA19B",
+"a 	c #C7C8C6",
+"b 	c #8A8C88",
+"c 	c #D6D9D3",
+"d 	c #E7E9E5",
+"e 	c #E5E7E3",
+"f 	c #E3E5E0",
+"g 	c #E1E4DE",
+"h 	c #DFE2DC",
+"i 	c #CFD3CD",
+"j 	c #A7A9A3",
+"k 	c #E1E3DF",
+"l 	c #828480",
+"m 	c #8C8F89",
+"n 	c #C2C4BF",
+"o 	c #AEAFAC",
+"p 	c #555654",
+"q 	c #2E2E2D",
+"r 	c #B3B4B1",
+"s 	c #E9EBE7",
+"t 	c #E7E9E4",
+"u 	c #E4E7E2",
+"v 	c #E2E5E0",
+"w 	c #E0E3DD",
+"x 	c #BFC2BD",
+"y 	c #BABCB7",
+"z 	c #B4B7B2",
+"A 	c #6D706B",
+"B 	c #868A85",
+"C 	c #CFD2CD",
+"D 	c #B4B5B1",
+"E 	c #D1D4D0",
+"F 	c #909190",
+"G 	c #1A1A1A",
+"H 	c #565855",
+"I 	c #5D5F5B",
+"J 	c #A1A49F",
+"K 	c #E6E8E4",
+"L 	c #E4E6E1",
+"M 	c #D8D9D4",
+"N 	c #ABAEA9",
+"O 	c #C8CBC6",
+"P 	c #6C6D69",
+"Q 	c #7C7E79",
+"R 	c #DADDD7",
+"S 	c #ACAEAA",
+"T 	c #F0F1F0",
+"U 	c #EBECEA",
+"V 	c #D4D4D3",
+"W 	c #595B57",
+"X 	c #969993",
+"Y 	c #545652",
+"Z 	c #000000",
+"` 	c #E3E6E1",
+" .	c #A4A6A2",
+"..	c #D6D8D3",
+"+.	c #61635E",
+"@.	c #7B7D79",
+"#.	c #B7B8B5",
+"$.	c #EAEAE8",
+"%.	c #F8F8F7",
+"&.	c #A1A39F",
+"*.	c #999C97",
+"=.	c #D6D8D5",
+"-.	c #D4D6D2",
+";.	c #DEDFDB",
+">.	c #ADAFAA",
+",.	c #C3C5C0",
+"'.	c #636560",
+").	c #737670",
+"!.	c #B0B4AE",
+"~.	c #C6C7C4",
+"{.	c #D3D4D2",
+"].	c #FBFCFB",
+"^.	c #F9FAF9",
+"/.	c #F8F9F7",
+"(.	c #F6F7F5",
+"_.	c #F4F5F3",
+":.	c #F1F2F0",
+"<.	c #EFF0ED",
+"[.	c #CBCDCA",
+"}.	c #BCBEBA",
+"|.	c #5D5F5A",
+"1.	c #7A7C77",
+"2.	c #D5DAD3",
+"3.	c #B3B3B1",
+"4.	c #EDEEED",
+"5.	c #FEFEFE",
+"6.	c #FDFDFC",
+"7.	c #FCFCFB",
+"8.	c #FAFBFA",
+"9.	c #E6E7E5",
+"0.	c #ABAEAA",
+"a.	c #D3D6CF",
+"b.	c #686A66",
+"c.	c #9C9F99",
+"d.	c #D0D2CD",
+"e.	c #B2B3B0",
+"f.	c #D5D6D4",
+"g.	c #F0F0F0",
+"h.	c #FCFCFC",
+"i.	c #EFF0EF",
+"j.	c #D5D5D3",
+"k.	c #CBCDC8",
+"l.	c #939790",
+"m.	c #5B5E59",
+"n.	c #616360",
+"o.	c #989B94",
+"p.	c #D2D7CF",
+"q.	c #C1C4C0",
+"r.	c #B5B6B3",
+"s.	c #ACADAA",
+"t.	c #C0C0BC",
+"u.	c #D0D4CD",
+"v.	c #92968F",
+"w.	c #5D5E5A",
+"x.	c #696B67",
+"y.	c #A2A49E",
+"z.	c #B9BDB6",
+"A.	c #CACEC6",
+"B.	c #B9BCB5",
+"C.	c #A0A39D",
+"D.	c #676965",
+"E.	c #5C5D5A",
+"F.	c #565854",
+"          . + @ # $             ",
+"      % & * = - ; > , '         ",
+"    ) ! ~ { ] ^ / ( _ : <       ",
+"  [ } | 1 2 3 4 5 & 6 7 8 9     ",
+"  0 a b c d e f g h i j k l     ",
+"m n o p q r s t u v w x y z A   ",
+"B C D E F G H I J K L M N O P   ",
+"Q R S T U V W X Y Z Z `  ...+.  ",
+"@.O #.$.%.- &.I *.=.-.;.>.,.'.  ",
+").!.~.{.].^./.(._.:.<.[.}.@ |.  ",
+"  1.2.3.4.5.6.7.8./.9.0.a.b.    ",
+"  b.c.d.e.f.g.h.i.j.] k.l.m.    ",
+"    n.o.p.q.r.s.r t.u.v.W       ",
+"      w.x.y.z.A.B.C.D.m.        ",
+"          E.I F.I E.            ",
+"                                "};
