@@ -1,0 +1,10 @@
+[Desktop Entry]
+Categories=GNOME;GTK;Utility;Calculator;
+Encoding=UTF-8
+Name=Walltime Panel
+GenericName=Segment Clock Control
+Exec=walltime-panel
+Icon=walltime
+Path=
+Type=Application
+Terminal=false
